--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -307,29 +307,23 @@ body.light-theme{
 .home__container{
   position: relative;
   row-gap: 4.5rem;
-  padding-top: 2rem;
+  padding-top: 5rem;
 }
 
 .home__data{
-  text-align: center;
+  padding-left: 5rem; */
+  text-align: left;
 
 }
 
 .home__greeting,
 .home__education{
-  font-size: var(--small-font-size);
-  font-weight: var(--font-medium);
-}
-
-.home__greeting{
-  display: block;
-  color: var(--title-color);
-  margin-bottom: .25rem;
-}
-
-.home__education{
+  font-size: var(--medium-font-size);
+  font-weight: var(--font-small);
   color: var(--text-color);
-  margin-bottom: 2.5rem;
+  margin-bottom: 5rem;
+  padding-bottom: 5rem;
+    /* display: block; */
 }
 
 .home__name{
@@ -359,10 +353,10 @@ body.light-theme{
 
 
 .home__buttons{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1.5rem;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* gap: 0.5rem; */
 }
 
 
@@ -424,23 +418,28 @@ body.light-theme{
 
 .button{
   display: inline-block;
-  background-color: var(--first-color);
+  background-color: #ededed;
+  /* background-color: var(--container-color);
+  color: var(--first-color); */
   color: var(--body-color);
-  padding: .75rem 1rem;
+  padding: .1rem 0.5rem;
   border-radius: .5rem;
   font-weight: var(--font-medium);
   transition: .4s;
 }
 
 .button:hover{
-  background-color: var(--first-color-alt);
-  color: var(--body-color);
+  /* background-color: var(--first-color-alt);
+  color: var(--body-color); */
+
+  background-color: var(--first-color);
+  color: #fff;
 }
 
 .button--ghost{
-  background-color: transparent;
-  border: 2px solid var(--first-color);
-  color: var(--first-color);
+  /* background-color: transparent; */
+  /* border: 2px solid var(--first-color); */
+  /* color: var(--first-color); */
 }
 
 /*=============== ABOUT ===============*/
