--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -462,10 +462,10 @@ body.light-theme{
   /* color: var(--body-color); */
   padding: .25rem 0.5rem;
   border-radius: .5rem;
-  font-weight: var(--font-medium);
+  /* font-weight: var(--font-medium); */
   transition: .4s;
   background-color: hsl(219, 15%, 92%);
-  color: #000;
+  color: var(--text-color);;
 }
 
 .indexbutton:hover{
